# ── Algorithms library ────────────────────────────────────────────────────────
# Add header-only or compiled algorithm targets here.
# Example:
#   add_library(dijkstra src/dijkstra.cpp)
#   target_include_directories(dijkstra PUBLIC include)

# ── Benchmarks ────────────────────────────────────────────────────────────────
# Add benchmark executables here.
# Example:
#   add_executable(bench_dijkstra benchmarks/bench_dijkstra.cpp)
#   target_link_libraries(bench_dijkstra PRIVATE dijkstra)
